feat(stripe): integrate Stripe payment and subscription features
- Added Stripe environment variables to .env.example
- Created payment and subscription checkout API routes
- Implemented customer management for Stripe in the database
- Developed frontend components for payment processing and subscription management
- Added a new Pagamentos page for handling payments
- Fixed typo in Landing Page title

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,9 @@ AUTH_GOOGLE_SECRET="YOUR_GOOGLE_AUTH_SECRET"
 FIREBASE_PROJECT_ID="YOUR_FIREBASE_PROJECT_ID"
 FIREBASE_CLIENT_EMAIL="YOUR_FIREBASE_CLIENT_EMAIL"
 FIREBASE_PRIVATE_KEY_BASE64="YOUR_BASE_FIREBASE_PRIVATE_BASE_64_KEY"
+
+STRIPE_SECRET_KEY="YOUR_STRIPE_SECRET_KEY"
+STRIPE_PRODUCT_PRICE_ID="YOUR_STRIPE_PRODUCT_PRICE_ID"
+STRIPE_SUBSCRIPTION_PRICE_ID="YOUR_STRIPE_SUBSCRIPTION_PRICE_ID"
+STRIPE_WEBHOOK_SECRET="YOUR_STRIPE_WEBHOOK_SECRET"
+NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY="YOUR_NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY"
