--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,7 @@ STRIPE_PRODUCT_PRICE_ID="YOUR_STRIPE_PRODUCT_PRICE_ID"
 STRIPE_SUBSCRIPTION_PRICE_ID="YOUR_STRIPE_SUBSCRIPTION_PRICE_ID"
 STRIPE_WEBHOOK_SECRET="YOUR_STRIPE_WEBHOOK_SECRET"
 NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY="YOUR_NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY"
+
+NEXT_PUBLIC_MERCADO_PAGO_PUBLIC_KEY="YOUR_NEXT_PUBLIC_MERCADO_PAGO_PUBLIC_KEY"
+MERCADO_PAGO_ACCESS_TOKEN="YOUR_MERCADO_PAGO_ACCESS_TOKEN"
+MERCADO_PAGO_WEBHOOK_SECRET="YOUR_MERCADO_PAGO_WEBHOOK_SECRET"
