feat(email): integrate Resend for payment and subscription notifications
- Added Resend API integration to send email notifications upon successful payments and subscription events.
- Updated Mercado Pago and Stripe handling functions to include user email for notification purposes.
- Modified environment variables in .env.example to include RESEND_API_KEY.

--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,5 @@ NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY="YOUR_NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY"
 NEXT_PUBLIC_MERCADO_PAGO_PUBLIC_KEY="YOUR_NEXT_PUBLIC_MERCADO_PAGO_PUBLIC_KEY"
 MERCADO_PAGO_ACCESS_TOKEN="YOUR_MERCADO_PAGO_ACCESS_TOKEN"
 MERCADO_PAGO_WEBHOOK_SECRET="YOUR_MERCADO_PAGO_WEBHOOK_SECRET"
+
+RESEND_API_KEY="YOUR_RESEND_API_KEY"
